<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_breadcrumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black2"
        android:textSize="12dp"
        android:text="Home  >  "/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_breadcrumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="12dp"
            tools:text="@string/tools_breadcrumb"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black2"
        android:textSize="24dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_breadcrumb"
        tools:text="@string/tools_title_news"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black2"
        android:textSize="12dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/tools_reporter"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_news"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_notfound"
        app:layout_constraintTop_toBottomOf="@id/tv_reporter"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black2"
        android:textSize="12dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_news"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/tools_caption"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black2"
        android:textSize="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_caption"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/tools_description"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:srcCompat="@drawable/share_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>